--- a/index.html
+++ b/index.html
@@ -1,8 +1,44 @@
-<!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<a href="blog/index.html">go deeper</a>
+<title>maratishe at github</title>
+<head>
+<meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
+<style>
+a { color: #6AF; }
+a:hover { color: #48F; }
+</style>
+</head>
+<body style="font-family:arial;">
+<div style="position:fixed;top:25px;left:0%;width:20%;height:auto;z-index:100000;text-align:right;font-size:smaller;">
+	<div style="position:relative;margin:0px 0px 0px 10%;width:90%;overflow:hidden;border-radius:15px;">
+		<img src="myphoto.jpg" style="width:100%;height:auto;"/>
+	</div>
+	<div style="height:10px;"></div>
+	past blogs: 
+	<a target="_blank" href="http://practicalclouds.blogspot.jp/">Practical Cloud Computing (Blogger)</a>, 
+	<a target="_blank" href="http://ideasworthshredding.blogspot.j/">Ideas Worth Shredding  (Blogger)</a>.
+</div>
+<div style="position:fixed;top:0px;left:0px;width:100%;height:auto;z-index:100001;color:#fff;font-size:smaller;">
+	<div style="position:absolute;top:0px;left:0px;width:100%;height:100%;background-color:#000;opacity:0.2;"></div>
+	<div style="color:#000;opacity:1.0;margin:3px 1%;width:98%;">A truly autonomous blog. I keep all the content. GitHub makes it public so that Google can get to index it.</div>
+	<div style="clear:both;"></div>
+</div>
+<div style="position:fixed;bottom:0px;left:0px;width:100%;height:auto;z-index:100001;color:#fff;font-size:smaller;">
+	<div style="position:absolute;top:0px;left:0px;width:100%;height:100%;background-color:#000;opacity:0.2;"></div>
+	<div style="position:relative;float:left;margin:1px 5px;color:#000;opacity:1.0;margin:3px 10px;width:auto;">
+		<a target="_blank" href="mailto:maratishe@gmail.com" style="color:#37C;">maratishe@GMail</a>
+	</div>
+	<div style="position:relative;float:left;margin:1px 5px;color:#000;opacity:1.0;margin:3px 10px;width:auto;">
+		<a target="_blank" href="http://github.com/maratishe" style="color:#C65;">maratishe@GitHub</a>
+	</div>
+	<div style="position:relative;float:left;margin:1px 5px;color:#000;opacity:1.0;margin:3px 10px;width:auto;">
+		<a target="_blank" href="https://twitter.com/marat_zhanikeev" style="color:#47A;">maratishe@Twitter</a>
+	</div>
+	<div style="position:relative;float:left;margin:1px 5px;color:#000;opacity:1.0;margin:3px 10px;width:auto;">
+		<a target="_blank" href="http://www.slideshare.net/zhopasushami" style="color:#A61;">maratishe@SlideShare</a>
+	</div>
+	<div style="height:3px;clear:both;"></div>
+</div>
+<div id="links" style="position:relative;margin:20px 0px 10px 21%;width:78%;">
+</div>
 </body>
 </html>
