--- a/index.backup.html
+++ b/index.backup.html
@@ -7,7 +7,7 @@ a { color: #6AF; }
 a:hover { color: #48F; }
 </style>
 </head>
-<body style="font-family:arial;position:relative;overflow:visible;">
+<body style="font-family:arial;">
 <div style="position:fixed;top:25px;left:0%;width:20%;height:auto;z-index:100000;text-align:right;font-size:smaller;">
 	<div style="position:relative;margin:0px 0px 0px 10%;width:90%;overflow:hidden;border-radius:15px;">
 		<img src="myphoto.jpg" style="width:100%;height:auto;"/>
@@ -38,8 +38,7 @@ a:hover { color: #48F; }
 	</div>
 	<div style="height:3px;clear:both;"></div>
 </div>
-<div id="links" style="position:relative;margin:30px 0px 10px 21%;width:78%;">
-<div style="position:relative;margin:2px 0px;width:100%;height:auto;font-size:larger;color:#000;"><strong>141028</strong> <a target="_blank" href="141028 The very first thought at Github Pages -- efficiency.html">The very first thought at Github Pages</a>  <span style="font-size:smaller;">tags: <strong>efficiency</strong></span></div>
+<div id="links" style="position:relative;margin:20px 0px 10px 21%;width:78%;">
 </div>
 </body>
 </html>
