--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@ a:hover { color: #48F; }
 		<img src="myphoto.jpg" style="width:100%;height:auto;"/>
 	</div>
 	<div style="height:10px;"></div>
+	links: 
+	<a target="_blank" href="http://dillinger.io/">dillinger.io</a>
+	<br/>
 	past blogs: 
 	<a target="_blank" href="http://practicalclouds.blogspot.jp/">Practical Cloud Computing (Blogger)</a>, 
-	<a target="_blank" href="http://ideasworthshredding.blogspot.j/">Ideas Worth Shredding  (Blogger)</a>.
+	<a target="_blank" href="http://ideasworthshredding.blogspot.j/">Ideas Worth Shredding  (Blogger)</a>
+	<br/>
 </div>
 <div style="position:fixed;top:0px;left:0px;width:100%;height:auto;z-index:100001;color:#fff;font-size:smaller;">
 	<div style="position:absolute;top:0px;left:0px;width:100%;height:100%;background-color:#000;opacity:0.2;"></div>
