--- a/141028 The very first thought at Github Pages -- efficiency.html
+++ b/141028 The very first thought at Github Pages -- efficiency.html
@@ -1,3 +1,5 @@
+<title>The very first thought at Github Pages</title>
+<meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
 <p><style>
 body { font-size:16px; font-family: arial; }
 em { font-size:larger; font-weight: bold; font-style: normal; text-decoration: none; } 
