--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 <style>
 a { color: #6AF; }
 a:hover { color: #48F; }
+a.local { color: #E43; font-weight: bold; }
+a.local:hover { color: #f00; }
 </style>
+<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="script.js"></script>
 </head>
 <body style="font-family:arial;position:relative;overflow:visible;">
 <div style="position:fixed;top:25px;left:0%;width:20%;height:auto;z-index:100000;text-align:right;font-size:smaller;">
@@ -18,32 +22,34 @@ a:hover { color: #48F; }
 	<br/>
 	past blogs: 
 	<a target="_blank" href="http://practicalclouds.blogspot.jp/">Practical Cloud Computing (Blogger)</a>, 
-	<a target="_blank" href="http://ideasworthshredding.blogspot.j/">Ideas Worth Shredding  (Blogger)</a>
-	<br/>
+	<a target="_blank" href="http://ideasworthshredding.blogspot.jp/">Ideas Worth Shredding  (Blogger)</a>
+<div id="tags">categories:  <a class="local" onclick="javascript:return false;"><span>all</span><span style="font-sizes:smaller;"> (1)</span></a><br/> <a class="local" onclick="javascript:return false;"><span>efficiency</span><span style="font-sizes:smaller;"> (1)</span></a><br/></div>
 </div>
 <div style="position:fixed;top:0px;left:0px;width:100%;height:auto;z-index:100001;color:#fff;font-size:smaller;">
-	<div style="position:absolute;top:0px;left:0px;width:100%;height:100%;background-color:#000;opacity:0.2;"></div>
-	<div style="color:#000;opacity:1.0;margin:3px 1%;width:98%;">A truly autonomous blog. I keep all the content. GitHub makes it public so that Google can get to index it.</div>
+	<div class="bg1" style="position:absolute;top:0px;left:0px;width:100%;height:100%;background-color:#fff;"></div>
+	<div class="bg2" style="position:absolute;top:0px;left:0px;width:100%;height:100%;background-color:#3BC;"></div>
+	<div style="position:relative;color:#167;margin:3px 1%;width:98%;z-index:100002;">A truly autonomous blog. I keep all the content. GitHub makes it public so that Google can get to index it.</div>
 	<div style="clear:both;"></div>
 </div>
 <div style="position:fixed;bottom:0px;left:0px;width:100%;height:auto;z-index:100001;color:#fff;font-size:smaller;">
-	<div style="position:absolute;top:0px;left:0px;width:100%;height:100%;background-color:#000;opacity:0.2;"></div>
+	<div class="bg1" style="position:absolute;top:0px;left:0px;width:100%;height:100%;background-color:#fff;"></div>
+	<div class="bg2" style="position:absolute;top:0px;left:0px;width:100%;height:100%;background-color:#3BC;"></div>
 	<div style="position:relative;float:left;margin:1px 5px;color:#000;opacity:1.0;margin:3px 10px;width:auto;">
-		<a target="_blank" href="mailto:maratishe@gmail.com" style="color:#37C;">maratishe@GMail</a>
+		<a target="_blank" href="mailto:maratishe@gmail.com" style="color:#167;">maratishe@GMail</a>
 	</div>
 	<div style="position:relative;float:left;margin:1px 5px;color:#000;opacity:1.0;margin:3px 10px;width:auto;">
-		<a target="_blank" href="http://github.com/maratishe" style="color:#C65;">maratishe@GitHub</a>
+		<a target="_blank" href="http://github.com/maratishe" style="color:#167;">maratishe@GitHub</a>
 	</div>
 	<div style="position:relative;float:left;margin:1px 5px;color:#000;opacity:1.0;margin:3px 10px;width:auto;">
-		<a target="_blank" href="https://twitter.com/marat_zhanikeev" style="color:#47A;">maratishe@Twitter</a>
+		<a target="_blank" href="https://twitter.com/marat_zhanikeev" style="color:#167;">maratishe@Twitter</a>
 	</div>
 	<div style="position:relative;float:left;margin:1px 5px;color:#000;opacity:1.0;margin:3px 10px;width:auto;">
-		<a target="_blank" href="http://www.slideshare.net/zhopasushami" style="color:#A61;">maratishe@SlideShare</a>
+		<a target="_blank" href="http://www.slideshare.net/zhopasushami" style="color:#167;">maratishe@SlideShare</a>
 	</div>
 	<div style="height:3px;clear:both;"></div>
 </div>
 <div id="links" style="position:relative;margin:30px 0px 10px 21%;width:78%;">
-<div style="position:relative;margin:2px 0px;width:100%;height:auto;font-size:larger;color:#000;"><strong>141028</strong> <a target="_blank" href="141028 The very first thought at Github Pages -- efficiency.html">The very first thought at Github Pages</a>  <span style="font-size:smaller;">tags: <strong>efficiency</strong></span></div>
+<div style="position:relative;margin:2px 0px;width:100%;height:auto;font-size:larger;color:#000;"><strong>141028</strong> <a target="_blank" href="141028 The very first thought at Github Pages -- efficiency.html">The very first thought at Github Pages</a>  <span style="font-size:12px;">tags: <a class="local" onclick="javascript:return false;">efficiency</a></span></div>
 </div>
 </body>
 </html>
