--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ a.local:hover { color: #f00; }
 	<div style="height:3px;clear:both;"></div>
 </div>
 <div id="links" style="position:relative;margin:30px 0px 10px 21%;width:78%;">
-<div style="position:relative;margin:2px 0px;width:100%;height:auto;font-size:larger;color:#000;"><strong>141028</strong> <a target="_blank" href="141028 The very first thought at Github Pages -- efficiency.html">The very first thought at Github Pages</a>  <span style="font-size:12px;">tags: <a class="local" onclick="javascript:return false;">efficiency</a></span></div>
+<div style="position:relative;margin:2px 0px;width:100%;height:auto;font-size:larger;color:#000;"><strong>141028</strong> <a target="_blank" href="141028 The very first thought at Github Pages -- efficiency.html">The very first thought at Github Pages</a> (<a target="_blank" style="font-size:smaller;" href="141028 The very first thought at Github Pages -- efficiency.pdf">pdf</a>)  <span style="font-size:12px;">tags: <a class="local" onclick="javascript:return false;">efficiency</a></span></div>
 </div>
 </body>
 </html>
