--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ a.local:hover { color: #f00; }
 	</div>
 	<div style="height:10px;"></div>
 	links: 
-	<a target="_blank" href="http://dillinger.io/">dillinger.io</a>
+	<a target="_blank" href="http://dillinger.io/">dillinger.io</a>, 
+	<a target="_blank" href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">markdown cheetsheet</a> 
 	<br/>
 	past blogs: 
 	<a target="_blank" href="http://practicalclouds.blogspot.jp/">Practical Cloud Computing (Blogger)</a>, 
