--- a/page.html
+++ b/page.html
@@ -4,3 +4,6 @@
 <script type="text/javascript" src="http://maratishe.github.io/jquery.cookies.js"></script>
 <script type="application/x-social-share-privacy-settings">{"path_prefix":"http://panzi.github.io/SocialSharePrivacy/","layout":"box"}</script>
 <div data-social-share-privacy='true'></div>
+
+
+<script type="text/javascript">(function () {var s = document.createElement('script');var t = document.getElementsByTagName('script')[0];s.type = 'text/javascript';s.async = true;s.src = 'http://panzi.github.io/SocialSharePrivacy/javascripts/jquery.socialshareprivacy.min.autoload.js';t.parentNode.insertBefore(s, t);})();</script>
