--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <title>maratishe at github</title>
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
 <script type="text/javascript" src="http://maratishe.github.io/jquery.min.js"></script>
-<script type="text/javascript" src="http://maratishe.github.io/jquery.cookies.js"></script>
-<script type="application/x-social-share-privacy-settings">{"path_prefix":"http://panzi.github.io/SocialSharePrivacy/","layout":"box"}</script>
+<script type="text/javascript" src="http://maratishe.github.io/jquery.social.js"></script>
+<script type="application/x-social-share-privacy-settings">{"path_prefix":"http://maratishe.github.io/","layout":"box"}</script>
 <div data-social-share-privacy='true'></div>
