--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <title>maratishe at github</title>
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
 <script type="text/javascript" src="jquery.min.js"></script>
-<script type="text/javascript" src="share.min.js"></script>
+<script type="text/javascript" src="share.js"></script>
 <div style="position:fixed;top:0px;right:5px;width:auto;height:auto;z-index:100000;" id="sharebuttons"></div>
 <script>
 $( document).ready( function() { 
@@ -10,9 +10,10 @@ $( document).ready( function() {
 		description: $.trim( $( 'title').text()) + ' at http://maratishe.github.io',
 		ui: { flyout: 'bottom left'},
 		networks: { 
-			google_plus: { enabled: true},
+			google_plus: { enabled: true, url: document.location.href},
 			twitter: { enabled: true},
 			facebook: { enabled: true},
+			linkedin: { url: document.location.href}, 
 			email: { enabled: true, to: 'maratishe@gmail.com', title: 'Comment to ' + $.trim( $( 'title').text()), description: "Marat, \n\n Concerning your GithubPage '" + $.trim( $( 'title').text()) + "'...\n\n"}
 		}
 	})
