--- a/141028.Installing.Hadoop.into.multiple.Fedora.20.machines_hadoop_bigdata_xcp.html
+++ b/141028.Installing.Hadoop.into.multiple.Fedora.20.machines_hadoop_bigdata_xcp.html
@@ -22,9 +22,9 @@ $( document).ready( function() {
 	//share.open();
 	//share.toggle();
 	$( 'header')
-	.append( '<meta property="og.title" content="' . $.trim( $( 'title').text()) . '"/>' . "\n";
-	.append( '<meta property="og.image" content="http://maratishe.github.io/myphoto.jpg"/>' . "\n";
-	.append( '<meta property="og.description" content="A Github Page on "' . $( 'title').text() . '" at  maratishe.github.io"/>' . "\n";
+	.append( '<meta property="og.title" content="' + $.trim( $( 'title').text()) + '"/>' + "\n";
+	.append( '<meta property="og.image" content="http://maratishe.github.io/myphoto.jpg"/>' + "\n";
+	.append( '<meta property="og.description" content="A Github Page on "' + $( 'title').text() + '" at  maratishe.github.io"/>' + "\n";
 })
 </script>
 <p><style> 
