--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@ a.local { color: #E43; font-weight: bold; }
 a.local:hover { color: #f00; }
 </style>
 <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="share.js"></script>
 <script src="script.js"></script>
 </head>
 <body style="font-family:arial;position:relative;overflow:visible;">
+<div style="position:fixed;top:0px;right:5px;width:auto;height:auto;z-index:100005;" id="sharebuttons"></div>
 <div style="position:fixed;top:25px;left:0%;width:20%;height:auto;z-index:100000;text-align:right;font-size:smaller;">
 	<div style="position:relative;margin:0px 0px 0px 10%;width:90%;overflow:hidden;border-radius:15px;">
 		<img src="myphoto.jpg" style="width:100%;height:auto;"/>
