--- a/141028.The.very.first.thought.at.Github.Pages_efficiency.html
+++ b/141028.The.very.first.thought.at.Github.Pages_efficiency.html
@@ -9,7 +9,7 @@
 $( document).ready( function() { 
 	var share = new Share( '#sharebuttons', { 
 		title: $.trim( $( 'title').text()),
-		description: $.trim( $( 'title').text()) + ' at http://maratishe.github.io',
+		description: $.trim( $( 'title').text()) + ' at maratishe.github.io. ',
 		ui: { flyout: 'bottom left'},
 		networks: { 
 			google_plus: { enabled: true, url: document.location.href},
