--- a/header.html
+++ b/header.html
@@ -1,29 +1,1 @@
-<title>maratishe at github</title>
-<header>
-<meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
-<script type="text/javascript" src="jquery.min.js"></script>
-<script type="text/javascript" src="share.js"></script>
-</header>
-<div style="position:fixed;top:0px;right:5px;width:auto;height:auto;z-index:100000;" id="sharebuttons"></div>
-<script>
-$( document).ready( function() { 
-	var share = new Share( '#sharebuttons', { 
-		title: $.trim( $( 'title').text()),
-		description: $.trim( $( 'title').text()) + ' at maratishe.github.io. ',
-		ui: { flyout: 'bottom left'},
-		networks: { 
-			google_plus: { enabled: true, url: document.location.href},
-			twitter: { enabled: true},
-			facebook: { enabled: true},
-			linkedin: { url: document.location.href}, 
-			email: { enabled: true, to: 'maratishe@gmail.com', title: 'Comment to ' + $.trim( $( 'title').text()), description: "Marat, \n\n Concerning your GithubPage '" + $.trim( $( 'title').text()) + "'...\n\n"}
-		}
-	})
-	//share.open();
-	//share.toggle();
-	$( 'header')
-	.append( '<meta property="og.title" content="' + $.trim( $( 'title').text()) + '"/>' + "\n")
-	.append( '<meta property="og.image" content="http://maratishe.github.io/myphoto.jpg"/>' + "\n")
-	.append( '<meta property="og.description" content="A Github Page on "' + $( 'title').text() + '" at  maratishe.github.io"/>' + "\n");
-})
-</script>
+<header><meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8"><script type="text/javascript" src="code/jquery.min.js"></script><script type="text/javascript" src="code/share.js"></script></header><div style="position:fixed;top:0px;right:5px;width:auto;height:auto;z-index:100000;" id="sharebuttons"></div><script src="code/page.js"></script>
