--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ a.local { color: #E43; font-weight: bold; }
 a.local:hover { color: #f00; }
 </style>
 <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-<script src="code/share.js"></script>
-<script src="code/script.js"></script>
+<script src="/scripts/share.js"></script>
+<script src="/scripts/script.js"></script>
 </head>
 <body style="font-family:arial;position:relative;overflow:visible;">
 <div style="position:fixed;top:0px;right:5px;width:auto;height:auto;z-index:100005;" id="sharebuttons"></div>
