--- a/141225.cloudy.diff.docker.migration.htm
+++ b/141225.cloudy.diff.docker.migration.htm
@@ -243,19 +243,19 @@ mso-fareast-theme-font:minor-fareast;mso-hansi-font-family:Century;mso-hansi-the
 minor-latin">申込み方法：以下から１つを選んでください</span><span lang="EN-US"></span></p>
 
 <p class="MsoNormal"><span lang="EN-US"><span style="mso-tab-count:1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>connpass:
- <a target="_blank" href="http://cloudy.connpass.com/event/10802</b>  ">http://cloudy.connpass.com/event/10802  </a> <br></span></p>
+ <a target="_blank" href="http://cloudy.connpass.com/event/10802">http://cloudy.connpass.com/event/10802  </a> <br></span></p>
 
 <p class="MsoNormal"><span lang="EN-US"><span style="mso-tab-count:1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>ATND:
- <a target="_blank" href="undefined">https://atnd.org/events/60614  </a> <br></span></p>
+ <a target="_blank" href="https://atnd.org/events/60614">https://atnd.org/events/60614</a> <br></span></p>
 
 <p class="MsoNormal"><span lang="EN-US"><span style="mso-tab-count:1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Zusaar:
- <a target="_blank" href="http://www.zusaar.com/event/7757003</b>  ">http://www.zusaar.com/event/7757003  </a> <br></span></p>
+ <a target="_blank" href="http://www.zusaar.com/event/7757003">http://www.zusaar.com/event/7757003  </a> <br></span></p>
 
 <p class="MsoNormal"><span lang="EN-US"><span style="mso-tab-count:1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>EventRegist:
- <a target="_blank" href="http://eventregist.com/e/sz4pnvzrllOe</b>  ">http://eventregist.com/e/sz4pnvzrllOe  </a> <br></span></p>
+ <a target="_blank" href="http://eventregist.com/e/sz4pnvzrllOe">http://eventregist.com/e/sz4pnvzrllOe  </a> <br></span></p>
 
 <p class="MsoNormal"><span lang="EN-US"><span style="mso-tab-count:1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>Doorkeeper:
- <a target="_blank" href="http://203bf11cdc9fe828307f116a01.doorkeeper.jp/events/18989</b>  ">http://203bf11cdc9fe828307f116a01.doorkeeper.jp/events/18989  </a> <br></span></p>
+ <a target="_blank" href="http://203bf11cdc9fe828307f116a01.doorkeeper.jp/events/18989">http://203bf11cdc9fe828307f116a01.doorkeeper.jp/events/18989</a> <br></span></p>
 
 <p class="MsoNormal"><span lang="EN-US">---</span></p>
 
