--- a/150618.deeplearning.h2o.bigdata.classifiers.useful.html
+++ b/150618.deeplearning.h2o.bigdata.classifiers.useful.html
@@ -3,7 +3,7 @@ em { font-size:larger; font-weight: bold; font-style: normal; text-decoration: n
 strong { font-size:larger; font-weight: bold; text-decoration: none; }
 h1 { margin: 0px 0px 0px 0px; font-size: 20px; font-weight: bold; color: #000; padding: 3px 3px; border-bottom: 2px solid #000; background-color: #ddd;}
 em code { background-color:#555; color:#fff; padding: 2px; padding-left: 4px; padding-right: 4px; border-radius: 4px; font-family: courier; }
-code { background-color:#f00; color:#fff; padding: 2px; padding-left: 4px; padding-right: 4px; border-radius: 4px; font-family: courier; }
+code { background-color:#FE8; color:#000; padding: 2px; padding-left: 4px; padding-right: 4px; border-radius: 4px; font-family: courier; }
 hr { border: 1px solid #999; margin: 5px 0px 10px; }
 blockquote { border-left: 2px solid #555; margin: 5px 0px 5px 20px; padding: 3px 5px; color: #36A; }
 a { color:#f00; font-weight: bold; text-decoration: underline; }
