--- a/header.html
+++ b/header.html
@@ -1,1 +1,26 @@
-<header><meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8"><script type="text/javascript" src="code/jquery.min.js"></script><script type="text/javascript" src="code/share.js"></script></header><div style="position:fixed;top:0px;right:5px;width:auto;height:auto;z-index:100000;" id="sharebuttons"></div><script src="code/page.js"></script>
+<header>
+<meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
+<script type="text/javascript" src="code/jquery.min.js"></script>
+<script type="text/javascript" src="code/share.js"></script>
+</header>
+<div style="position:fixed;top:0px;right:5px;width:auto;height:auto;z-index:100000;" id="sharebuttons"></div>
+<script src="code/page.js"></script>
+<style>
+em { font-size:larger; font-weight: bold; font-style: normal; text-decoration: none; } 
+strong { font-size:larger; font-weight: bold; text-decoration: none; }
+h1 { margin: 0px 0px 0px 0px; font-size: 20px; font-weight: bold; color: #000; padding: 3px 3px; border-bottom: 2px solid #000; background-color: #ddd;}
+em code { background-color:#555; color:#fff; padding: 2px; padding-left: 4px; padding-right: 4px; border-radius: 4px; font-family: courier; }
+code { display: block; background-color:#f00; color:#fff; padding: 2px; padding-left: 4px; padding-right: 4px; border-radius: 4px; font-family: courier; }
+hr { border: 1px solid #999; margin: 5px 0px 10px; }
+blockquote { border-left: 2px solid #555; margin: 5px 0px 5px 20px; padding: 3px 5px; color: #36A; }
+a { color:#f00; font-weight: bold; text-decoration: underline; }
+hdr { font-size: 22px; font-weight: bold; display:block;} /* headers */
+pass { font-size: 14px; font-weight: bold; background-color:#49F; color:#fff; padding: 2px; padding-left: 4px; padding-right: 4px; border-radius: 4px;} /* passwords */
+uline { font-size:larger; font-weight: bold; font-style: normal; text-decoration: none; background-color:#ccc; }
+tr { display: block; position: relative; clear: both; height: 3px; }
+img { width: 60%; float: right; height: auto; border:0px; }
+s0 { font-size:larger; font-weight: bold; font-style: normal; text-decoration: underline; }
+s1 { font-size:larger; font-weight: bold; font-style: normal; text-decoration: none; background-color:#ccc; }
+s2 { font-size:larger; font-weight: bold; font-style: normal; text-decoration: none; background-color:#EF4; font-family: courier; } /* courier.yellow.bg */
+s3 { text-decoration: line-through; }
+</style> 
