--- a/gcal/jobhunt.html
+++ b/gcal/jobhunt.html
@@ -1,12 +1,13 @@
 <h1 id="jobhunt">jobhunt <span id="top"></span></h1>
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
 <p>this file is generated automatically, do not make manual changes to it!</p>
-<p>2020-06-26 <a href="#f4122f8fe2">拓殖大.ソフトウェア工学</a><br />
-2020-07-15 <a href="#c6feced1df">中央大</a><br />
-2020-07-15 <a href="#81352ab904">同志社大</a><br />
-2020-07-17 <a href="#c02e478905">千葉商科大</a><br />
-2020-07-17 <a href="#96921a1828">千葉商科大.情報・メディア</a><br />
-2020-07-20 <a href="#fa7c4db3c2">近畿大情報セキュリティ評価</a><br />
+<p>2020-06-01 <a href="#a5bc67a750"><strike>龍谷大.通信工学分野</strike></a><br />
+2020-06-26 <a href="#6b396e23f4"><strike>拓殖大.ソフトウェア工学</strike></a><br />
+2020-07-15 <a href="#2cd515325a"><strong>中央大</strong></a><br />
+2020-07-15 <a href="#4417a089ab"><strike>同志社大</strike></a><br />
+2020-07-17 <a href="#0f634778c3"><strike>千葉商科大</strike></a><br />
+2020-07-17 <a href="#11424e7100"><strike>千葉商科大.情報・メディア</strike></a><br />
+2020-07-20 <a href="#a496e2fbce"><strike>近畿大情報セキュリティ評価★推薦書</strike></a><br />
 2020-07-21 <a href="#afe59e13cb">東京大</a><br />
 2020-07-24 <a href="#1faa482cfc">慶應義塾.情報工学分野</a><br />
 2020-07-30 <a href="#a59d532b7d">滋賀大</a><br />
@@ -16,28 +17,28 @@
 2020-07-31 <a href="#837a6a163d">法政大.信号処理、統計、計測、機械学習分野</a><br />
 2020-07-31 <a href="#e24f2cb09e">名古屋大.人間情報学</a><br />
 2020-08-12 <a href="#5287ecef42">三重大.知能工学講座・データサイエンス2jobs</a><br />
-2020-08-17 <a href="#6bedfcd2ce">筑波大</a><br />
 2020-08-17 <a href="#2a5cbddcf2">NAIST.ロボティクス分野</a><br />
-2020-08-19 <a href="#16a1d3b9d0">近畿大.経営ビジネス学科1.電気電子工学科1.情報学科3jobs</a><br />
+2020-08-17 <a href="#6bedfcd2ce">筑波大</a><br />
 2020-08-19 <a href="#ee1efdc1df">岡山県立大.知覚情報処理</a><br />
+2020-08-19 <a href="#16a1d3b9d0">近畿大.経営ビジネス学科1.電気電子工学科1.情報学科3jobs</a><br />
+2020-08-21 <a href="#18a05c382d">玉川大学.国際教養学科</a><br />
 2020-08-21 <a href="#f9b82aea16">龍谷大.情報工学分野</a><br />
 2020-08-21 <a href="#e75713566c">龍谷大.通信工学分野</a><br />
-2020-08-21 <a href="#18a05c382d">玉川大学.国際教養学科</a><br />
 2020-08-22 <a href="#2239e09e58">近畿大.総合理工</a><br />
 2020-08-24 <a href="#4c438c163f">久留米大.情報学フロンティア</a><br />
 2020-08-24 <a href="#e9d0f232de">中京大.コンピュータ処理論及び関連科目</a><br />
 2020-08-25 <a href="#3ef71d894d">日本大.ロボット・制御</a><br />
 2020-08-28 <a href="#4f2559a4fd">広島工業大</a><br />
 2020-08-31 <a href="#1d2deb79a1">立命館大学2jobs(1eng).情報理工学部.セキュリティ・ネットワークコース</a><br />
-2020-08-31 <a href="#ad2eb56a5b">般社団法人CRD</a><br />
 2020-08-31 <a href="#3b904bc834">東京電機大.人間情報学</a><br />
+2020-08-31 <a href="#ad2eb56a5b">般社団法人CRD</a><br />
 2020-08-31 <a href="#56f2829a1f">日本工業大</a><br />
 2020-08-31 <a href="#955f81b4e2">東京都立大.情報学基礎.2posts</a><br />
-2020-08-31 <a href="#039122b303">京都大.通信情報システム</a><br />
+2020-08-31 <a href="#5fa1a2f2e1">株式会社Nextremer.計算科学.quantum</a><br />
 2020-08-31 <a href="#3697049074">大阪大.情報科学</a><br />
 2020-08-31 <a href="#c56f9be485">滋賀県立大.センシング工学分野</a><br />
 2020-08-31 <a href="#306428a9df">駒澤大.情報分野</a><br />
-2020-08-31 <a href="#5fa1a2f2e1">株式会社Nextremer.計算科学.quantum</a><br />
+2020-08-31 <a href="#039122b303">京都大.通信情報システム</a><br />
 2020-08-31 <a href="#38136546d5">岡山理科大.情報数理.情報工学.2posts</a><br />
 2020-09-07 <a href="#abe8802bd2">明治大</a><br />
 2020-09-10 <a href="#7a86734726">公立はこだて未来大</a><br />
@@ -59,108 +60,13 @@
 2020-10-09 <a href="#bd5caa898a">立命館大学.システム制御工学.無線通信・電波</a><br />
 2020-10-16 <a href="#d25f1244df">FIT.制御・計測に関連する分野</a><br />
 2020-10-30 <a href="#b9af474c3b">福岡工業大</a></p>
-<h2 id="龍谷大.通信工学分野-2020-08-21-top">龍谷大.通信工学分野 (2020-08-21) <span id="e75713566c"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 11<br />
-id : D120051249 [UPDATE]<br />
-update : 2020年06月01日<br />
-univ : 龍谷大学<br />
-title : 教授、准教授または講師の公募（電子、通信工学分野）<br />
-field : 工学 - 電気電子工学 情報学 - 全て<br />
-post : 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年08月21日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120051249&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120051249&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="拓殖大.ソフトウェア工学-2020-06-26-top">拓殖大.ソフトウェア工学 (2020-06-26) <span id="f4122f8fe2"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 25<br />
-id : D120060077 [NEW]<br />
-update : 2020年06月03日<br />
-univ : 拓殖大学<br />
-title : 工学部教員公募（准教授または助教）「ソフトウェア工学」 他<br />
-field : 情報学 - 計算基盤<br />
-post : 准教授・常勤専任講師相当 助教相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年06月26日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060077&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060077&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="中央大-2020-07-15-top">中央大 (2020-07-15) <span id="c6feced1df"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>No. ：56<br />
-データ番号 ：D120041144 [NEW]<br />
-更新日 ：2020年04月28日<br />
-機関名 ：中央大学<br />
-タイトル ：教授・准教授・助教の公募（電気電子情報通信工学分野）<br />
-研究分野 ：工学 - 全て<br />
-職種 ： 教授相当<br />
-准教授・常勤専任講師相当<br />
-勤務形態 ： 常勤 (任期なし)<br />
-募集終了日 ：2020年07月15日<br />
-ＵＲＬ ： <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120041144&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120041144&amp;ln_jor=0&amp;top_btn=1</a><br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="同志社大-2020-07-15-top">同志社大 (2020-07-15) <span id="81352ab904"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>No. ：32<br />
-データ番号 ：D120050783 [NEW]<br />
-更新日 ：2020年05月22日<br />
-機関名 ：同志社大学<br />
-タイトル ：教授または准教授の公募（行動データ科学）<br />
-研究分野 ：情報学 - 人間情報学<br />
-社会科学 - 全て<br />
-人文学 - 全て<br />
-職種 ： 教授相当<br />
-准教授・常勤専任講師相当<br />
-勤務形態 ： 常勤 (任期なし)<br />
-募集終了日 ：2020年07月15日<br />
-ＵＲＬ ： <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120050783&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120050783&amp;ln_jor=0&amp;top_btn=1</a><br />
-———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="千葉商科大-2020-07-17-top">千葉商科大 (2020-07-17) <span id="c02e478905"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>No. ：19<br />
-データ番号 ：D120041052 [NEW]<br />
-更新日 ：2020年04月25日<br />
-機関名 ：千葉商科大学<br />
-タイトル ：教授又は准教授の公募「情報・メディア（主として情報リテラシー）」<br />
-研究分野 ：情報学 - 情報学フロンティア<br />
-複合領域 - 科学教育・教育工学<br />
-職種 ： 教授相当<br />
-准教授・常勤専任講師相当<br />
-勤務形態 ： 常勤 (任期なし)<br />
-募集終了日 ：2020年07月17日<br />
-ＵＲＬ ： <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120041052&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120041052&amp;ln_jor=0&amp;top_btn=1</a></p>
-<p>No. ：51データ番号 ：D120041055 [NEW]<br />
-更新日 ：2020年04月25日<br />
-機関名 ：千葉商科大学<br />
-タイトル ：准教授又は専任講師の公募「情報科教育法、教育課程論等」<br />
-研究分野 ：社会科学 - 教育学<br />
-社会科学 - 教科教育学(情報)<br />
-社会科学 - 教員養成<br />
-職種 ： 准教授・常勤専任講師相当<br />
-勤務形態 ： 常勤 (任期なし)<br />
-募集終了日 ：2020年07月17日<br />
-ＵＲＬ ： <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120041055&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120041055&amp;ln_jor=0&amp;top_btn=1</a><br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="千葉商科大.情報メディア-2020-07-17-top">千葉商科大.情報・メディア (2020-07-17) <span id="96921a1828"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 2<br />
-id : D120041052 [UPDATE]<br />
-update : 2020年06月18日<br />
-univ : 千葉商科大学<br />
-title : 教授又は准教授の公募「情報・メディア（主として情報リテラシー）」<br />
-field : 情報学 - 情報学フロンティア 複合領域 - 科学教育・教育工学<br />
-post : 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年07月17日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120041052&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120041052&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="近畿大情報セキュリティ評価-2020-07-20-top">近畿大情報セキュリティ評価 (2020-07-20) <span id="fa7c4db3c2"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 58<br />
-id : D120061201 [NEW]<br />
-update : 2020年06月23日<br />
-univ : 近畿大学<br />
-title : 准教授または教授の公募（情報セキュリティ評価）【再公募】<br />
-field : 情報学 - 計算基盤<br />
-post : 准教授・常勤専任講師相当 教授相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年07月20日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120061201&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120061201&amp;ln_jor=0&amp;top_btn=1</a> REC-IN Portalより、ご登録のマッチング条件に合った新着求人公募情報をお知らせします。 ※公開中の情報が更新された場合も含まれますので、ご了承ください。 ※新規情報には[NEW]、更新情報には[UPDATE]が表示されます。 ※URL欄に[→サイト名]が表示された情報は、連携する外部求人サイトから提供されたものです。求人の詳細は、各サイトの求人ページへジャンプし表示します。 —【求人公募情報】— ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="龍谷大.通信工学分野-2020-06-01-top"><strike>龍谷大.通信工学分野</strike> (2020-06-01) <span id="a5bc67a750"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="拓殖大.ソフトウェア工学-2020-06-26-top"><strike>拓殖大.ソフトウェア工学</strike> (2020-06-26) <span id="6b396e23f4"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="中央大-2020-07-15-top"><strong>中央大</strong> (2020-07-15) <span id="2cd515325a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="同志社大-2020-07-15-top"><strike>同志社大</strike> (2020-07-15) <span id="4417a089ab"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="千葉商科大-2020-07-17-top"><strike>千葉商科大</strike> (2020-07-17) <span id="0f634778c3"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="千葉商科大.情報メディア-2020-07-17-top"><strike>千葉商科大.情報・メディア</strike> (2020-07-17) <span id="11424e7100"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="近畿大情報セキュリティ評価推薦書-2020-07-20-top"><strike>近畿大情報セキュリティ評価★推薦書</strike> (2020-07-20) <span id="a496e2fbce"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="東京大-2020-07-21-top">東京大 (2020-07-21) <span id="afe59e13cb"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>No. ：36<br />
 データ番号 ：D120051070 [NEW]<br />
@@ -401,6 +307,18 @@ post : 教授相当 准教授・常勤専任講師相当<br />
 tenure : 常勤 (任期なし)<br />
 deadline : 2020年08月21日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120051248&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120051248&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
+<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="龍谷大.通信工学分野-2020-08-21-top">龍谷大.通信工学分野 (2020-08-21) <span id="e75713566c"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<p>no : 11<br />
+id : D120051249 [UPDATE]<br />
+update : 2020年06月01日<br />
+univ : 龍谷大学<br />
+title : 教授、准教授または講師の公募（電子、通信工学分野）<br />
+field : 工学 - 電気電子工学 情報学 - 全て<br />
+post : 教授相当 准教授・常勤専任講師相当<br />
+tenure : 常勤 (任期なし)<br />
+deadline : 2020年08月21日<br />
+url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120051249&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120051249&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="近畿大.総合理工-2020-08-22-top">近畿大.総合理工 (2020-08-22) <span id="2239e09e58"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>No. ：11<br />
