--- a/gcal/fundhunt.html
+++ b/gcal/fundhunt.html
@@ -1,3 +1,113 @@
 <h1 id="fundhunt">fundhunt <span id="top"></span></h1>
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
 <p>this file is generated automatically, do not make manual changes to it!</p>
+<p>2020-07-22 <a href="#47c586ba5f">国立研究開発法人科学技術振興機構.「IoE社会のエネルギーシステム」</a><br />
+2020-08-05 <a href="#d41d8cd98f"></a><br />
+2020-09-11 <a href="#7ac92177c4">本多記念賞200万・50万・30万.2items</a><br />
+2020-09-30 <a href="#70159d238b">airpf人工知能研究振興財団</a></p>
+<h2 id="国立研究開発法人科学技術振興機構.ioe社会のエネルギーシステム-2020-07-22-top">国立研究開発法人科学技術振興機構.「IoE社会のエネルギーシステム」 (2020-07-22) <span id="47c586ba5f"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<p>年度 2020年度<br />
+募集機関・財団名 国立研究開発法人科学技術振興機構<br />
+事業名 戦略的イノベーション創造プログラム（SIP）「IoE社会のエネルギーシステム」<br />
+リンク <a href="https://www.jst.go.jp/sip/p08/koubo_2020.html">https://www.jst.go.jp/sip/p08/koubo_2020.html</a><br />
+課題詳細 戦略的イノベーション創造プログラム（SIP）は、科学技術イノベーション総合戦略（平成25年6月7日閣議決定）及び日本再興戦略（平成25年6月14日閣議決定）において、総合科学技術会議が司令塔機能を発揮し、科学技術イノベーションを実現するため創設することが決定しました。 SIPは、府省・分野を超えた横断型のプログラムであり、総合科学技術会議が課題を特定し、予算を重点配分するものであり、課題ごとにPD(プログラムディレクター）を選定し、基礎研究から出口（実用化・事業化）までを見据え、規制・制度改革や特区制度の活用等も視野に入れて推進していくものです。<br />
+応募者詳細 ・自らの研究開発構想に基づき、産学連携を含めその構想の実現に適した実施体制を構築し、研究責任者として当該研究開発テーマを推進できる研究者であること。<br />
+・研究開発項目に係る分野において、研究蓄積を有するとともに、研究実施において必要となる関係者との連携や協力体制が構築できる活動実績を有すること。<br />
+・国内の研究機関※に所属して研究開発を実施できること。<br />
+※「国内の研究機関」：国内に法人格を持つ大学、独立行政法人、国公立試験研究機関、特別認可法人、公益法人等、企業等のうち、研究開発を実施している機関。<br />
+・不適正経理に係る申請資格の制限等に抵触していない研究者であること。<br />
+・所属研究機関において、研究倫理教育に関するプログラムを予め修了していること。または、JSTが提供する教育プログラムを所定の時期までに修了していること。<br />
+※詳しくは、公募要領「研究倫理教育に関するプログラムの受講・修了について」をご参照ください。<br />
+助成期間 (最短) 1年 から (最長) 3年<br />
+助成率 -<br />
+限度額 999,999,999千円<br />
+採用予定数 -<br />
+申請期限 2020年07月22日 募集状況 募集中<br />
+<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="top">(2020-08-05) <span id="d41d8cd98f"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<p>年度 2020年度<br />
+募集機関・財団名 国立研究開発法人科学技術振興機構<br />
+事業名 戦略的イノベーション創造プログラム（SIP）「IoE社会のエネルギーシステム」<br />
+リンク <a href="https://www.jst.go.jp/sip/p08/koubo_2020.html">https://www.jst.go.jp/sip/p08/koubo_2020.html</a><br />
+課題詳細 戦略的イノベーション創造プログラム（SIP）は、科学技術イノベーション総合戦略（平成25年6月7日閣議決定）及び日本再興戦略（平成25年6月14日閣議決定）において、総合科学技術会議が司令塔機能を発揮し、科学技術イノベーションを実現するため創設することが決定しました。 SIPは、府省・分野を超えた横断型のプログラムであり、総合科学技術会議が課題を特定し、予算を重点配分するものであり、課題ごとにPD(プログラムディレクター）を選定し、基礎研究から出口（実用化・事業化）までを見据え、規制・制度改革や特区制度の活用等も視野に入れて推進していくものです。<br />
+応募者詳細 ・自らの研究開発構想に基づき、産学連携を含めその構想の実現に適した実施体制を構築し、研究責任者として当該研究開発テーマを推進できる研究者であること。<br />
+・研究開発項目に係る分野において、研究蓄積を有するとともに、研究実施において必要となる関係者との連携や協力体制が構築できる活動実績を有すること。<br />
+・国内の研究機関※に所属して研究開発を実施できること。<br />
+※「国内の研究機関」：国内に法人格を持つ大学、独立行政法人、国公立試験研究機関、特別認可法人、公益法人等、企業等のうち、研究開発を実施している機関。<br />
+・不適正経理に係る申請資格の制限等に抵触していない研究者であること。<br />
+・所属研究機関において、研究倫理教育に関するプログラムを予め修了していること。または、JSTが提供する教育プログラムを所定の時期までに修了していること。<br />
+※詳しくは、公募要領「研究倫理教育に関するプログラムの受講・修了について」をご参照ください。<br />
+助成期間 (最短) 1年 から (最長) 3年<br />
+助成率 -<br />
+限度額 999,999,999千円<br />
+採用予定数 -<br />
+申請期限 2020年07月22日 募集状況 募集中<br />
+<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="本多記念賞200万50万30万.2items-2020-09-11-top">本多記念賞200万・50万・30万.2items (2020-09-11) <span id="7ac92177c4"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<p>募集要項概要<br />
+年度 2020年度<br />
+募集機関・財団名 本多記念会<br />
+事業名 本多記念賞<br />
+リンク <a href="http://hondakinenkai.or.jp/misc/download.html">http://hondakinenkai.or.jp/misc/download.html</a><br />
+課題詳細 わが国に国籍を有する者で、理工学、特に金属およびその周辺材料に関連する研究を行い、基礎または応用面において優れた成果を挙げ、科学文化の進展に卓抜な貢献をした者を対象とする。<br />
+なお、団体は受賞対象としない。<br />
+応募者詳細 推薦者<br />
+理工系の大学、国公私立研究機関、学会、関連の企業および当記念会の委嘱する個人。ただし、同一推薦者による推薦件数は１件に限るものとする。<br />
+なお、推薦者は、候補者を推薦するに当たり、過去の受賞者一覧（当記念会ホームページに掲載）を参考に推薦するものとする。<br />
+助成期間 -<br />
+助成率 -<br />
+限度額 本賞：金メダル、副賞：２００万円<br />
+採用予定数 毎年１件を予定<br />
+申請期限 2020年09月11日 募集状況 募集中</p>
+<p>年度 2020年度<br />
+募集機関・財団名 本多記念会<br />
+事業名 本多フロンティア賞<br />
+リンク <a href="http://hondakinenkai.or.jp/misc/download.html">http://hondakinenkai.or.jp/misc/download.html</a><br />
+課題詳細 理工学、特に金属材料などの無機材料、有機材料及びこれらの複合材料の３分野のいずれかの分野において、学術面あるいは技術面において画期的な発見又は発明を行った者を対象とする。<br />
+なお、団体は受賞対象としない。<br />
+応募者詳細 推薦者<br />
+理工系の大学、国公私立研究機関、学会、関連の企業および当記念会の委嘱する個人。<br />
+なお、推薦者は、候補者を推薦するに当たり、過去の受賞者一覧（当記念会ホームページに掲載）を参考にして推薦するものとする。<br />
+助成期間 -<br />
+助成率 -<br />
+限度額 ５０万円<br />
+採用予定数 毎年２件を予定<br />
+申請期限 2020年09月11日 募集状況 募集中</p>
+<p>年度 2020年度<br />
+募集機関・財団名 本多記念会<br />
+事業名 本多記念研究奨励賞<br />
+リンク <a href="http://hondakinenkai.or.jp/misc/download.html">http://hondakinenkai.or.jp/misc/download.html</a><br />
+課題詳細 わが国に国籍を有する者で、理工学、特に金属に関連する研究を行い、優れた研究成果を挙げ、または発明を行ったもので、将来の発展を期待できる若い研究者を対象とする。<br />
+応募者詳細 受賞発表の年の３月末日現在満４０歳以下の者（今回は昭和５５年４月１日以降に生まれた者。<br />
+ただし、過去に本多記念研究奨励賞を受賞した者を除く。）で、共同研究の場合は主研究者であること。自薦でも良い。（なお、学位の有無を記入してください。）<br />
+なお、推薦者（自薦者）は、候補者を推薦（自薦）するに当たり、過去の受賞者一覧(当記念会ホームページに掲載)を参考に推薦（自薦）するものとする。<br />
+助成期間 -<br />
+助成率 -<br />
+限度額 ３０万円<br />
+採用予定数 毎年５件を予定<br />
+申請期限 2020年09月11日 募集状況 募集中<br />
+<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="airpf人工知能研究振興財団-2020-09-30-top">airpf人工知能研究振興財団 (2020-09-30) <span id="70159d238b"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<p>年度 2020年度<br />
+募集機関・財団名 人工知能研究振興財団<br />
+事業名 研究助成<br />
+リンク <a href="http://www.airpf.or.jp/index.html">http://www.airpf.or.jp/index.html</a><br />
+課題詳細 研究テーマ<br />
+人工知能及び関連技術分野（人工知能を活用した情報処理技術、情報通信技術等）の高度化に関する調査、研究及び開発（以下「研究」という）であって、次の各号に掲げるものとします。<br />
+(1) 産業・環境分野における技術高度化並びに生産性改善のための人工知能及びその利用技術に関する研究<br />
+(2) 医療・介護・教育・経済・法律等の知的支援に関する研究<br />
+(3) 画像･音声理解、ヒューマンインターフェイス、エンターテイメント、感性情報処理の高度化に関する研究<br />
+(4) ロボットの感覚・運動・思考・知能・感情・インタラクション等に関する研究<br />
+(5) インターネット・IoT・モバイルシステムの知的で安全な利用法に関する研究<br />
+(6) その他、人工知能の基礎及びその利用技術等に関する研究<br />
+応募者詳細 助成研究の適格要件<br />
+次の各号の要件を満たすものとします。<br />
+(1) 産業技術の高度化に寄与する研究であること<br />
+(2) 研究を実施する者（研究実施者）が、研究を計画に従って遂行するに足る能力を有すること<br />
+(3) 研究の計画及び方法が目的を達成するために適切であり、かつ、十分な成果を期待し得るものであること<br />
+助成期間 -<br />
+助成率 -<br />
+限度額 100万円<br />
+採用予定数 -<br />
+申請期限 2020年09月30日 募集状況 募集中<br />
+<span style="color:#666;"><a href="#top">→top</a></span></p>
